@@ -52,6 +52,7 @@ public:
   const std::string& type () const            { return _type;       }
   bool modifiable () const                    { return _modifiable; }
   bool is_uda () const                        { return _uda;        }
+  bool is_fixed_width () const                { return _fixed_width;}
   std::vector <std::string> styles () const   { return _styles;     }
   std::vector <std::string> examples () const { return _examples;   }
 
@@ -76,6 +77,7 @@ protected:
   std::string _report;
   bool _modifiable;
   bool _uda;
+  bool _fixed_width;
   std::vector <std::string> _styles;
   std::vector <std::string> _examples;
 };
